# remusao.github.io

./: .gitignore  .gitmodules  .travis.yml  Main.hs  _config.yml  a-tour-of-ihaskell-extensions-and-integrations.html  about.html  about.md  archive.html  archive.md  archives.html  atom.xml  authors.html  blog.hs  categories.html  contact.html  contact.md  decompressing-bzipped-files-with-julia.html  deploy.sh  emojis.ts  feedback-from-hash-code-2016-qualification-round.html  index.html  index.ts  index2.html  install-ihaskell-on-ubuntu-1404-with-stack.html  installation-de-julia.html  julia.html  learning-a-new-language-the-tools.html  notes.html  package-lock.json  package.json  package.yaml  pytest-paramaterize-tests-with-external-data.html  python-inheriting-from-str-class.html  python-inheriting-tuple-class.html  remusao-github-io.cabal  rss.xml  rubiks-cube-world-records-analysis.html  site.hs  stack.yaml  (+7 more)
.github/: dependabot.yml
_includes/: comments.html  google_analytics.html  twitter_plug.html
_layouts/: default.html  post.html
_posts/: 2014-02-13-julia.markdown  2014-02-14-julia-installation.markdown  2014-03-05-python-inherit-from-str.markdown  2014-03-05-python-inheritance-tips.markdown  2014-07-22-decompressing-bz2-files-with-julia.markdown  2014-11-26-pytest_param.markdown
author/: pythux.html  pythux2.html
category/: haskell.html  julia.html  misc.html  productivity.html  python-pytest.html  python.html
css/: default.css
drafts/: 2017-10-09-the-quest-for-tooling.md  2017-10-21-private-analytics.md  2017-10-21-static-comments.md  34c3.md  (+17 more)
(+283 files in other folders)
