name:               remusao-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , latex-formulae-hakyll == 0.2.0.3
                  , latex-formulae-image == 0.1.1.3
                  , latex-formulae-pandoc == 0.2.0.5
  ghc-options:      -threaded
  default-language: Haskell2010
